[gd_scene load_steps=3 format=3 uid="uid://c0drd5npyrnoi"]

[ext_resource type="Script" path="res://profile_button.gd" id="1_5a1eg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfn4f"]
bg_color = Color(0.201527, 0.201527, 0.201526, 1)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="Panel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bfn4f")
script = ExtResource("1_5a1eg")

[node name="Label" type="Label" parent="."]
layout_mode = 2
horizontal_alignment = 1

[node name="RightClick" type="PopupMenu" parent="."]
size = Vector2i(115, 100)
item_count = 3
item_0/text = "Open Folder"
item_1/text = "Edit Name"
item_1/id = 1
item_2/text = "Delete"
item_2/id = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="index_pressed" from="RightClick" to="." method="_on_right_click_index_pressed"]
[connection signal="mouse_exited" from="RightClick" to="." method="_on_right_click_mouse_exited"]
